<resources>
    <string name="app_name">Clean City</string>
    <string name="title_profile">Профиль</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_map">Карта</string>
    <string name="title_more">Ещё</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="have_no_account">Нет аккаунта?</string>
    <string name="create">Создать</string>
    <string name="enter">Вход</string>
    <string name="repeat_password">Повторить пароль</string>
    <string name="registration">Регистрация</string>
    <string name="back">Назад</string>
</resources>
