<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                             android:layout_height="match_parent">

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/loginText" android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="20dp"
            android:layout_marginStart="20dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="20dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.3"
            android:hint="@string/login"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/passwordText" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/loginText"
            app:layout_constraintEnd_toEndOf="@+id/loginText" app:layout_constraintStart_toStartOf="@+id/loginText"
            android:hint="@string/password"/>
    <TextView
            android:text="@string/have_no_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2" app:layout_constraintStart_toStartOf="@+id/passwordText"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/passwordText"/>
    <Button
            android:text="@string/create"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:id="@+id/createAccountButton"
            style="@style/Widget.AppCompat.Button.Borderless.Colored" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintStart_toStartOf="@+id/textView2"/>
    <Button
            android:text="@string/enter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/enterButton"
            style="@style/Widget.AppCompat.Button"
            app:layout_constraintTop_toTopOf="@+id/createAccountButton"
            app:layout_constraintBottom_toBottomOf="@+id/createAccountButton"
            app:layout_constraintEnd_toEndOf="@+id/passwordText"
            android:onClick="login"/>
</android.support.constraint.ConstraintLayout>