<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent">

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/loginText" android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="20dp"
            android:layout_marginStart="20dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="20dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.3"
            android:hint="@string/login"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/passwordText" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/loginText"
            app:layout_constraintEnd_toEndOf="@+id/loginText" app:layout_constraintStart_toStartOf="@+id/loginText"
            android:hint="@string/password"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/passwordRepeatText" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/passwordText"
            app:layout_constraintEnd_toEndOf="@+id/passwordText"
            app:layout_constraintStart_toStartOf="@+id/passwordText"
            android:hint="@string/repeat_password"/>

    <Button
            android:text="@string/registration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/registrationButton"
            style="@style/Widget.AppCompat.Button"
            app:layout_constraintEnd_toEndOf="@+id/passwordText"
            android:onClick="registration"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/passwordRepeatText"/>

    <Button
            android:text="@string/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/backButton"
            style="@style/Widget.AppCompat.Button"
            android:onClick="back"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/passwordRepeatText"
            app:layout_constraintStart_toStartOf="@+id/passwordRepeatText"/>

</android.support.constraint.ConstraintLayout>